# exp-starter

./: .gitignore  README.md  pyproject.toml  setup.sh
explib/: __init__.py  gdb.py
explib/core/: __init__.py  connector.py  context.py  exploit.py  shortcuts.py
kexp/: Makefile  ex.c
kexp/include/: utils.h
kexp/src/: utils.c
pwninit/src/: template.py
scripts/: kfs.sh  krun.sh  ksend.py
