[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explib"
version = "0.1.0"
description = "Reusable pwntools exploit helper library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pwntools"]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["explib*"]
